[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-lint"
version = "0.1.1"
description = "Static analysis for FastMCP servers — catches schema quality issues before they ship"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "fastmcp", "linting", "ai", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
fastmcp-lint = "fastmcp_lint.cli:main"

[project.urls]
Homepage = "https://github.com/0-co/fastmcp-lint"
Repository = "https://github.com/0-co/fastmcp-lint"
"Bug Tracker" = "https://github.com/0-co/fastmcp-lint/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastmcp_lint"]
